--- a/sobre.html
+++ b/sobre.html
@@ -46,6 +46,25 @@
                 </div>
             </div>
         </section>
+
+        <!-- Nova seção de galeria -->
+        <section class="galeria-section">
+            <h2>Nossa Oficina em Imagens</h2>
+            <div class="galeria-grid">
+                <div class="galeria-item">
+                    <img src="./images/oficina-mecanica.jpg" alt="Imagem da oficina 1">
+                </div>
+                <div class="galeria-item">
+                    <img src="./images/manutencao-preventiva.jpg" alt="Imagem da oficina 2">
+                </div>
+                <div class="galeria-item">
+                    <img src="./images/ferramentas.jpg" alt="Imagem da oficina 3">
+                </div>
+                <div class="galeria-item">
+                    <img src="./images/diagnostico.jpg" alt="Imagem da oficina 4">
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
