--- a/sobre.html
+++ b/sobre.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Nós - Auto Mecânica</title>
-    <link rel="stylesheet" href="./index/index.css">
+    <link rel="stylesheet" href="./sobre/sobre.css">
 </head>
 <body>
     <header>
